// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeSelect renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="base-Input relative inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] group text-nowrap h-8 w-full after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(:focus)]:after:border-blue after:border [&:has(:focus)]:after:shadow-[0_0_0_3px] [&:has(:focus)]:after:shadow-blue hover:[&:not(:has(:focus))]:after:border-gray text-black cursor-[inherit] p-0 bg-white"
      >
        <select
          aria-invalid="false"
          class="appearance-none select-none rounded-none min-w focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none peer resize-none text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100 w-full p-2 focus:bg-inheritColor pr-6"
          type="text"
        >
          <option
            disabled=""
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NativeSelect renders native select with the empty option enabled when enableReset is \`true\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="base-Input relative inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] group text-nowrap h-8 w-full after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(:focus)]:after:border-blue after:border [&:has(:focus)]:after:shadow-[0_0_0_3px] [&:has(:focus)]:after:shadow-blue hover:[&:not(:has(:focus))]:after:border-gray text-black cursor-[inherit] p-0 bg-white"
      >
        <select
          aria-invalid="false"
          class="appearance-none select-none rounded-none min-w focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none peer resize-none text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100 w-full p-2 focus:bg-inheritColor pr-6"
          type="text"
        >
          <option
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
